Solution Updated